[tool.poetry]
name = "2024-p1-ricardoyam"
version = "0.1.0"
description = ""
authors = ["Ricardo_Li <46476463+RicardoYam@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
